--- a/frontend/admin/MM.html
+++ b/frontend/admin/MM.html
@@ -8,88 +8,174 @@
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   </head>
   <body>
-<div class="MainCont">
-  <div class="SecCont">
-    <!-- Home -->
-    <div class="HomeCont">
-      <!-- Sidebar -->
-      <div class="Sidebar">
-        <div class="FH">
-          <div class="logo">
-            <img src="../assets/logo.png" alt="" style="height: 200px" />
-          </div>
-          <div class="menu">
-            <div class="DashBoard">
-              <b><a href="" style="text-decoration: none; color: black"><p>Dashboard</p></a></b>
-            </div>
-            <div class="UserData">
-              <b><a href="" style="text-decoration: none; color: black"><p>MEMBER</p></a></b>
-            </div>
-            <div class="CashiersData">
-              <b><a href="" style="text-decoration: none; color: black"><p>Cashier Data</p></a></b>
-            </div>
-            <div class="TransREport">
-              <b><a href="" style="text-decoration: none; color: black"><p>Transaction Report</p></a></b>
-            </div>
-            <div class="Member2">
-              <b><a href="" style="text-decoration: none; color: black"><p>Member Membership</p></a></b>
-            </div>
-            <div class="MemPlans">
-              <b><a href="" style="text-decoration: none; color: black"><p>Membership Plans</p></a></b>
-            </div>
-          </div>
-          <div class="SH"></div>
-        </div>
-      </div> <!-- CLOSE Sidebar -->
-
-      <!-- Main Dashboard -->
-      <div class="MainBoard">
-        <!-- Header -->
-        <div class="header">
-          <div class="DashbordDesc" style="padding-left: 30px">
-            <p style="font-size: 30px">Member Membership</p>
-          </div>
-          <div class="Profile" style="padding-right: 20px; display: flex; justify-content: space-evenly; align-items: center; width: 15%;">
-            <div class="Name">
-              <p>Welcome <br />Manager 0076</p>
-            </div>
-            <div class="ProfilePic" style="background-color: black; height: 50px; width: 50px; border-radius: 50px; align-items: center; justify-content: center; display: flex;">
-              <p style="color: aliceblue">O&lt;&lt;</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="MainBoardBody">
-          <div class="SeccondBoardBody">
-            <div class="TableAndInput" style="width: 100%; height: 100%">
-              <div class="table">
-                <table style="border-collapse: collapse; width: 100%; text-align: center;">
-                  <thead>
-                    <tr style="background-color: #3f729b; color: white">
-                      <th style="padding: 10px; border: 2px solid #2e5984">ID Membership</th>
-                      <th style="padding: 10px; border: 2px solid #2e5984">ID Member</th>
-                      <th style="padding: 10px; border: 2px solid #2e5984">ID Plan</th>
-                      <th style="padding: 10px; border: 2px solid #2e5984">Start Date</th>
-                      <th style="padding: 10px; border: 2px solid #2e5984">End Date</th>
-                      <th style="padding: 10px; border: 2px solid #2e5984">Payment Status</th>
-                      <th style="padding: 10px; border: 2px solid #2e5984">Action</th>
-                    </tr>
-                  </thead>
-                  <tbody id="tbody"></tbody>
-                </table>
+    <div class="MainCont">
+      <div class="SecCont">
+        <!-- Home -->
+        <div class="HomeCont">
+          <!-- Sidebar -->
+          <div class="Sidebar">
+            <div class="FH">
+              <div class="logo">
+                <img src="../assets/logo.png" alt="" style="height: 200px" />
               </div>
-              <div class="button" style="width: 100%; height: fit-content; display: flex; justify-content: center; align-items: center;">
-                <button style="width: 200px; height: 30px; background-color: green; border: none; border-radius: 10px;">
-                  <p>Add Data</p>
-                </button>
+              <div class="menu">
+                <div class="DashBoard">
+                  <b
+                    ><a href="" style="text-decoration: none; color: black"
+                      ><p>Dashboard</p></a
+                    ></b
+                  >
+                </div>
+                <div class="UserData">
+                  <b
+                    ><a href="" style="text-decoration: none; color: black"
+                      ><p>MEMBER</p></a
+                    ></b
+                  >
+                </div>
+                <div class="CashiersData">
+                  <b
+                    ><a href="" style="text-decoration: none; color: black"
+                      ><p>Cashier Data</p></a
+                    ></b
+                  >
+                </div>
+                <div class="TransREport">
+                  <b
+                    ><a href="" style="text-decoration: none; color: black"
+                      ><p>Transaction Report</p></a
+                    ></b
+                  >
+                </div>
+                <div class="Member2">
+                  <b
+                    ><a href="" style="text-decoration: none; color: black"
+                      ><p>Member Membership</p></a
+                    ></b
+                  >
+                </div>
+                <div class="MemPlans">
+                  <b
+                    ><a href="" style="text-decoration: none; color: black"
+                      ><p>Membership Plans</p></a
+                    ></b
+                  >
+                </div>
+              </div>
+              <div class="SH"></div>
+            </div>
+          </div>
+          <!-- CLOSE Sidebar -->
+
+          <!-- Main Dashboard -->
+          <div class="MainBoard">
+            <!-- Header -->
+            <div class="header">
+              <div class="DashbordDesc" style="padding-left: 30px">
+                <p style="font-size: 30px">Member Membership</p>
+              </div>
+              <div
+                class="Profile"
+                style="
+                  padding-right: 20px;
+                  display: flex;
+                  justify-content: space-evenly;
+                  align-items: center;
+                  width: 15%;
+                "
+              >
+                <div class="Name">
+                  <p>Welcome <br />Manager 0076</p>
+                </div>
+                <div
+                  class="ProfilePic"
+                  style="
+                    background-color: black;
+                    height: 50px;
+                    width: 50px;
+                    border-radius: 50px;
+                    align-items: center;
+                    justify-content: center;
+                    display: flex;
+                  "
+                >
+                  <p style="color: aliceblue">O&lt;&lt;</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="MainBoardBody">
+              <div class="SeccondBoardBody">
+                <div class="TableAndInput" style="width: 100%; height: 100%">
+                  <div class="table">
+                    <table
+                      style="
+                        border-collapse: collapse;
+                        width: 100%;
+                        text-align: center;
+                      "
+                    >
+                      <thead>
+                        <tr style="background-color: #3f729b; color: white">
+                          <th style="padding: 10px; border: 2px solid #2e5984">
+                            ID Membership
+                          </th>
+                          <th style="padding: 10px; border: 2px solid #2e5984">
+                            ID Member
+                          </th>
+                          <th style="padding: 10px; border: 2px solid #2e5984">
+                            ID Plan
+                          </th>
+                          <th style="padding: 10px; border: 2px solid #2e5984">
+                            Start Date
+                          </th>
+                          <th style="padding: 10px; border: 2px solid #2e5984">
+                            End Date
+                          </th>
+                          <th style="padding: 10px; border: 2px solid #2e5984">
+                            Payment Status
+                          </th>
+                          <th style="padding: 10px; border: 2px solid #2e5984">
+                            Action
+                          </th>
+                        </tr>
+                      </thead>
+                      <tbody id="tbody"></tbody>
+                    </table>
+                  </div>
+                  <div
+                    class="button"
+                    style="
+                      width: 100%;
+                      height: fit-content;
+                      display: flex;
+                      justify-content: center;
+                      align-items: center;
+                    "
+                  >
+                    <button
+                      style="
+                        width: 200px;
+                        height: 30px;
+                        background-color: green;
+                        border: none;
+                        border-radius: 10px;
+                      "
+                    >
+                      <p>Add Data</p>
+                    </button>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
+          <!-- CLOSE MainBoard -->    
         </div>
-      </div> <!-- CLOSE MainBoard -->
-    </div> <!-- CLOSE HomeCont -->
-  </div> <!-- CLOSE SecCont -->
-</div> <!-- CLOSE MainCont -->
+        <!-- CLOSE HomeCont -->
+      </div>
+      <!-- CLOSE SecCont -->
+    </div>
+    <!-- CLOSE MainCont -->
 
     <script>
       $(document).ready(() => {
