--- a/frontend/admin/member.html
+++ b/frontend/admin/member.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../style/ADMIN/admin-display.css">
+    <link rel="stylesheet" href="../style/ADMIN/admin-display.css" />
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <title>Document</title>
   </head>
@@ -16,11 +16,7 @@
           <div class="Sidebar">
             <div class="FH">
               <div class="logo">
-                <img
-                  src="../assets/logo.png"
-                  alt=""
-                  style="height: 200px"
-                />
+                <img src="../assets/logo.png" alt="" style="height: 200px" />
               </div>
               <div class="menu">
                 <div class="DashBoard">
@@ -70,114 +66,96 @@
             </div>
           </div>
           <!-- Main Dashboard -->
-            <div class="MainBoard">
-              <!-- Header -->
-              <div class="header">
-                <div class="DashbordDesc" style="padding-left: 30px">
-                  <p style="font-size: 30px">Member</p>
+          <div class="MainBoard">
+            <!-- Header -->
+            <div class="header">
+              <div class="DashbordDesc" style="padding-left: 30px">
+                <p style="font-size: 30px">Member</p>
+              </div>
+              <div
+                class="Profile"
+                style="
+                  padding-right: 20px;
+                  display: flex;
+                  justify-content: space-evenly;
+                  align-items: center;
+                  width: 15%;
+                "
+              >
+                <div class="Name">
+                  <p>
+                    Welcome <br />
+                    Manager 0076
+                  </p>
                 </div>
                 <div
-                  class="Profile"
+                  class="ProfilePic"
                   style="
-                    padding-right: 20px;
-                    display: flex;
-                    justify-content: space-evenly;
+                    background-color: black;
+                    height: 50px;
+                    width: 50px;
+                    border-radius: 50px;
                     align-items: center;
-                    width: 15%;
+                    justify-content: center;
+                    display: flex;
                   "
                 >
-                  <div class="Name">
-                    <p>
-                      Welcome <br />
-                      Manager 0076
-                    </p>
-                  </div>
-                  <div
-                    class="ProfilePic"
-                    style="
-                      background-color: black;
-                      height: 50px;
-                      width: 50px;
-                      border-radius: 50px;
-                      align-items: center;
-                      justify-content: center;
-                      display: flex;
-                    "
-                  >
-                    <p style="color: aliceblue">O<<</p>
-                  </div>
+                  <p style="color: aliceblue">O<<</p>
                 </div>
               </div>
-              <div class="MainBoardBody">
-                <div class="SeccondBoardBody">
-                  <div class="TableAndInput" style="width: 100%; height: 100%">
-                    <div class="table">
-                      <table
-                        style="
-                          border-collapse: collapse;
-                          width: 100%;
-                          text-align: center;
-                        "
-                      >
-                        <thead>
-                          <tr style="background-color: #3f729b; color: white">
-                            <th
-                              style="padding: 10px; border: 2px solid #2e5984"
-                            >
-                              Member ID
-                            </th>
-                            <th
-                              style="padding: 10px; border: 2px solid #2e5984"
-                            >
-                              Member Name
-                            </th>
-                            <th
-                              style="padding: 10px; border: 2px solid #2e5984"
-                            >
-                              No Telp
-                            </th>
-                            <th
-                              style="padding: 10px; border: 2px solid #2e5984"
-                            >
-                              Jenis Kelamin
-                            </th>
-                            <th
-                              style="padding: 10px; border: 2px solid #2e5984"
-                            >
-                              Tanggal Daftar
-                            </th>
-                            <th
-                              style="padding: 10px; border: 2px solid #2e5984"
-                            >
-                              Tanggal Lahir
-                            </th>
-                            <th
-                              style="padding: 10px; border: 2px solid #2e5984"
-                            >
-                              User ID
-                            </th>
-                            <th
-                              style="padding: 10px; border: 2px solid #2e5984"
-                            >
-                              Action
-                            </th>
-                          </tr>
-                        </thead>
-                        <tbody id="tbody">
-                        </tbody>
-                      </table>
-                    </div>
+            </div>
+            <div class="MainBoardBody">
+              <div class="SeccondBoardBody">
+                <div class="TableAndInput" style="width: 100%; height: 100%">
+                  <div class="table">
+                    <table
+                      style="
+                        border-collapse: collapse;
+                        width: 100%;
+                        text-align: center;
+                      "
+                    >
+                      <thead>
+                        <tr style="background-color: #3f729b; color: white">
+                          <th style="padding: 10px; border: 2px solid #2e5984">
+                            Member ID
+                          </th>
+                          <th style="padding: 10px; border: 2px solid #2e5984">
+                            Member Name
+                          </th>
+                          <th style="padding: 10px; border: 2px solid #2e5984">
+                            No Telp
+                          </th>
+                          <th style="padding: 10px; border: 2px solid #2e5984">
+                            Jenis Kelamin
+                          </th>
+                          <th style="padding: 10px; border: 2px solid #2e5984">
+                            Tanggal Daftar
+                          </th>
+                          <th style="padding: 10px; border: 2px solid #2e5984">
+                            Tanggal Lahir
+                          </th>
+                          <th style="padding: 10px; border: 2px solid #2e5984">
+                            User ID
+                          </th>
+                          <th style="padding: 10px; border: 2px solid #2e5984">
+                            Action
+                          </th>
+                        </tr>
+                      </thead>
+                      <tbody id="tbody"></tbody>
+                    </table>
                   </div>
                 </div>
-              </div>
+              </div>  
             </div>
           </div>
         </div>
       </div>
     </div>
     <script>
-        $(document).ready(() => {
-          //button to add user
+      $(document).ready(() => {
+        //button to add user
 
         function loadMember(keyword = "") {
           $.ajax({
