--- a/frontend/Member/Tampilan_transaksi.html
+++ b/frontend/Member/Tampilan_transaksi.html
@@ -50,7 +50,7 @@
         loadTransactions();
       });
 
-      const dataMemberJson = sessionStorage.getItem("dataMember");
+      const dataMemberJson = sessionStorage.getItem("loggedUser");
       const dataMemberObj = JSON.parse(dataMemberJson);
 
       console.log(dataMemberObj);
