--- a/frontend/kasir/index.html
+++ b/frontend/kasir/index.html
@@ -13,16 +13,22 @@
       <h1>Transaction</h1>
       <p>Kelola Transaksi hari ini?</p>
     </div>
+  
     <div class="profile-section">
-      <span>Good Morning<br>Cashier 01</span>
+      <span id="kasirName"></span>
       <img src="../assets/logo member.png" alt="User Icon" style="width: 50px; height: 40px; border-radius: 50%;">
     </div>
   </header>
 
   <div class="container">
     <div class="top-bar">
-      <button class="add-btn" onclick="window.location.href='tambah_transaksi.html'">+ add data</button>
-      <input type="text" class="search-box" placeholder="CST001">
+        <div class="logout">
+          <button id="logout">logout</button>
+        </div>
+      <div class="search-box">
+        <input type="text" id="searchInput" placeholder="Search Member ID..." />
+        <button onclick="searchTransaction()">🔍</button>
+      </div>
     </div>
 
     <div class="table-container">
@@ -32,10 +38,8 @@
             <th>Member ID</th>
             <th>Transaction ID</th>
             <th>Member Name</th>
-            <th>Time of Transaction</th>
             <th>Package Paid</th>
             <th>Payment Amount</th>
-            <th>Payment Method</th>
             <th>Action</th>
           </tr>
         </thead>
@@ -48,11 +52,22 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script>
     $(document).ready(function () {
+       const kasirData = sessionStorage.getItem("loggedKasir");
+
+      if (kasirData) {
+        const kasirObj = JSON.parse(kasirData);
+        $('#kasirName').text(kasirObj.username);
+      } else {
+        window.location.href = "login.html";
+      }
+
+      console.log("Kasir Data:", kasirData);
       $.ajax({
         url: 'http://localhost/gymini/backend/api/transaction/get-transaction.php',
         method: 'GET',
         success: function (response) {
           const data = response.data;
+          console.log(data);
 
           if (!Array.isArray(data)) {
             alert('Gagal mengambil data transaksi: format data tidak sesuai');
@@ -66,9 +81,7 @@
                 <td>${item.members_id}</td>
                 <td>${item.id_transaction}</td>
                 <td>${item.nama_members}</td>
-                <td>-</td> <!-- Time of Transaction -->
                 <td>${item.nama_paket}</td>
-                <td>-</td> <!-- Payment Amount -->
                 <td>${item.payment_method}</td>
                 <td><button class="print-btn">Print</button></td>
               </tr>`;
@@ -81,6 +94,18 @@
         }
       });
     });
+          $("#logout").click(() => {
+        alert("Logout Successfuly");
+        window.location.href = "login.html";
+        sessionStorage.removeItem("loggedkasir");
+        sessionStorage.removeItem("profile");
+      });
+
+      function searchTransaction() {
+        const keyword = $("#searchInput").val().trim();
+        loadTransactions(keyword);
+      }
+      
   </script>
 </body>
 </html>
