--- a/frontend/kasir/register.html
+++ b/frontend/kasir/register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GYMMINI</title>
-    <link rel="stylesheet" href="../../public/css/auth-css.css" />
+    <link rel="stylesheet" href="../style/auth/auth-css.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
@@ -84,7 +84,7 @@
                   "registeredUser",
                   JSON.stringify(res.data)
                 );
-                window.location.href = "index.php";
+                window.location.href = "index.html";
                 alert("Register successfuly");
               }
             },
