added a lot of things

--- a/frontend/admin/member.html
+++ b/frontend/admin/member.html
@@ -62,8 +62,17 @@
                   >
                 </div>
               </div>
-              <div class="SH"></div>
+              
             </div>
+            <div class="SH">
+                 <div class="SH">
+                  <div class="menu2">
+                    <div class="LogOut">
+                      <b><a href="" style="text-decoration: none; color: black"><p>Log Out</p></a></b>
+                    </div>
+                </div>
+              </div>
+              </div>
           </div>
           <!-- Main Dashboard -->
           <div class="MainBoard">
@@ -224,7 +233,7 @@
                               margin-right: 5px;
                               border-radius: 4px;
                               cursor: pointer;
-                            "
+                            " data-id="${member.members_id}" class="delete-btn"
                           >
                             Delete
                           </button>
@@ -239,6 +248,29 @@
           });
         }
         loadMember();
+
+        function deletemember(id) {
+            $.ajax({
+              url: `http://localhost/gymini/backend/api/member/delete-member.php?id=${id}`,
+              type: "DELETE", // or "POST" if your API doesn't support DELETE
+              success: function (response) {
+                console.log("Deleted:", response);
+                alert("Member data deleted successfully!");
+                loadMember(); // Reload table data
+              },
+              error: function (xhr, status, error) {
+                console.error("Delete failed:", error);
+                alert("Failed to delete cashier.");
+              }
+            });
+        }
+
+        $(document).on("click", "button[data-id]", function () {
+          const id = $(this).data("id"); // Grab cashier ID
+            if (confirm("Are you sure you want to delete this member?")) {
+          deletemember(id);
+          }
+        });
       });
     </script>
   </body>
