--- a/frontend/admin/Cashier.html
+++ b/frontend/admin/Cashier.html
@@ -62,8 +62,17 @@
                   >
                 </div>
               </div>
-              <div class="SH"></div>
+              
             </div>
+            <div class="SH">
+                 <div class="SH">
+                  <div class="menu2">
+                    <div class="LogOut">
+                      <b><a href="" style="text-decoration: none; color: black"><p>Log Out</p></a></b>
+                    </div>
+                </div>
+              </div>
+              </div>
           </div>
           <!-- Close Sidebar -->
 
@@ -150,7 +159,7 @@
                       justify-content: center;
                       align-items: center;
                     "
-                  >a
+                  >
                     <button
                       style="
                         width: 200px;
@@ -158,14 +167,14 @@
                         background-color: green;
                         border: none;
                         border-radius: 10px;
-                      "
+                      " id="addData"
                     >
-                      <p>Add Data</p>
+                     Add Data
                     </button>
                   </div>
                 </div>
               </div>
-            </div>
+            </div>   
           </div>
           <!-- Close MainBoard -->
         </div>
@@ -228,7 +237,7 @@
                           > Edit
                           </button>
                         </a>
-                          <button
+                            <button
                             style="
                               background-color: red;
                               color: white;
@@ -237,7 +246,7 @@
                               margin-right: 5px;
                               border-radius: 4px;
                               cursor: pointer;
-                            "
+                            "  data-id="${cashier.user_id}" class="delete-btn"
                           >
                             Delete
                           </button>
@@ -252,6 +261,36 @@
           });
         }
         loadkasir();
+
+       $("#addData").click(function () {
+          window.location.href = "../admin/addCashier.html";
+        });
+
+        function DeleteKasir(id) {
+            $.ajax({
+              url: `http://localhost/gymini/backend/api/kasir/delete-kasir.php?id=${id}`,
+              type: "DELETE", // or "POST" if your API doesn't support DELETE
+              success: function (response) {
+                console.log("Deleted:", response);
+                alert("Cashier deleted successfully!");
+                loadkasir(); // Reload table data
+              },
+              error: function (xhr, status, error) {
+                console.error("Delete failed:", error);
+                alert("Failed to delete cashier.");
+              }
+            });
+        }
+
+        $(document).on("click", "button[data-id]", function () {
+          const id = $(this).data("id"); // Grab cashier ID
+            if (confirm("Are you sure you want to delete this cashier?")) {
+          DeleteKasir(id);
+          }
+        });
+
+
+
       });
     </script>
   </body>
