--- a/frontend/admin/Home.html
+++ b/frontend/admin/Home.html
@@ -62,7 +62,14 @@
                 </div>
               </div>
             </div>
-            <div class="SH"></div>
+            <div class="SH">
+                  <div class="menu2">
+                    <div class="LogOut">
+                      <b><a href="" style="text-decoration: none; color: black"><p>Log Out</p></a></b>
+                    </div>
+                </div>
+            </div>
+            
           </div>
           <!-- Main Dashboard -->
           <div class="MainBoard">
