--- a/frontend/admin/Transaction.html
+++ b/frontend/admin/Transaction.html
@@ -37,8 +37,17 @@
               <b><a href="" style="text-decoration: none; color: black;"><p>Membership Plans</p></a></b>
             </div>
           </div>
-          <div class="SH"></div>
+          <div class="SH">
+             
+          </div>
         </div>
+        <div class="SH">
+                  <div class="menu2">
+                    <div class="LogOut">
+                      <b><a href="" style="text-decoration: none; color: black"><p>Log Out</p></a></b>
+                    </div>
+                </div>
+            </div>
       </div> <!-- Close Sidebar -->
 
       <!-- Main Dashboard -->
