--- a/frontend/admin/cashieredit.html
+++ b/frontend/admin/cashieredit.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../style/ADMIN/adduser.css" />
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <title>Document</title>
   </head>
   <body>
@@ -61,8 +62,17 @@
                   >
                 </div>
               </div>
-              <div class="SH"></div>
+              
             </div>
+            <div class="SH">
+                 <div class="SH">
+                  <div class="menu2">
+                    <div class="LogOut">
+                      <b><a href="" style="text-decoration: none; color: black"><p>Log Out</p></a></b>
+                    </div>
+                </div>
+              </div>
+              </div>
           </div>
 
           <!-- Main Dashboard -->
@@ -113,16 +123,24 @@
                 "
               >
                 <div class="card">
-                  <label>Name</label>
-                  <input type="text" />
+                  <form action="" id="editTITIT">
+                    <label >Kasir ID</label>
+                    <input type="text" readonly id="useID" name="user_id"/>
 
-                  <label>Gmail</label>
-                  <input type="email" />
+                    <label >Name</label>
+                    <input type="text" id="name" name="username"/>
 
-                  <label>Role</label>
-                  <input type="text" />
+                    <label>Gmail</label>
+                    <input type="email" id="email" name="email" />
 
-                  <button class="edit-btn">Edit</button>
+                    <label >New Password</label>
+                    <input type="text" id="pw" name="password" />
+
+                    <label  >Role</label>
+                    <input type="text" id="role" name="role" />
+
+                    <button class="edit-btn">Edit</button>
+                  </form>
                 </div>
               </div>
             </div>
@@ -134,5 +152,69 @@
       <!-- Close SecCont -->
     </div>
     <!-- Close MainCont -->
+     <script>
+          $(document).ready(() => {
+          function LoadDatabyID() {
+          const params = new URLSearchParams(window.location.search);
+          const id = params.get("id");
+          console.log(id); // Output: 123
+
+          $.ajax({
+            url: `http://localhost/gymini/backend/api/kasir/get-data-kasir.php?id=${id}`,
+            method: "GET",
+            dataType: "json",
+            success: function (response) {
+              const data = Array.isArray(response) ? response : response.data;
+              console.log(data);
+              $("#useID").val(data.user_id);
+              $("#name").val(data.username);
+              $("#email").val(data.email);
+         
+              $("#role").val(data.role);
+            },
+          });
+        }
+
+        LoadDatabyID();
+
+        const editTITIT = $("#editTITIT");
+
+        editTITIT.submit((e) => {
+          e.preventDefault();
+
+          const formData = editTITIT.serializeArray();
+
+          const formDataObj = {};
+
+          formData.forEach((field) => {
+            formDataObj[field.name] = field.value;
+          });
+
+          console.log(formData);
+          console.log(JSON.stringify(formDataObj));
+          $.ajax({
+            url: "http://localhost/gymini/backend/api/kasir/update-kasir.php",
+            type: "PATCH",
+            contentType: "application/json",
+            data: JSON.stringify(formDataObj),
+            success: (res) => {
+              if (res.status === 200) {
+                alert("Edit Successfuly");
+                window.location.href = "Cashier.html";
+              }
+            },
+            error: (xhr, status, error) => {
+              console.log(`Error: ${error}`);
+              console.log(`xhr: ${JSON.parse(xhr.responseText)}`);
+              console.log(`status: ${status}`);
+
+              const responseApi = JSON.parse(xhr.responseText);
+
+              console.log(responseApi.errors);
+            },
+          });
+        });
+      });
+     </script>
   </body>
 </html>
